# bank_account_embeddings

./: .gitignore  README.md  coverage.json  mypy.ini  pyproject.toml  requirements.txt  run_tests.py
config/: default.yaml
docs/: DEPLOYMENT.md  financial_flags_summary.md
scripts/: debug_nan.py  run_e2e.sh  run_experiment.sh
scripts/data_prep/: config.yaml  consolidate_data.py  generate_labels.py
src/hierarchical/: __init__.py  config.py
src/hierarchical/analysis/: analyze_account_types.py
src/hierarchical/data/: __init__.py  balance.py  dataset.py  financial_flags.py  loader.py  preloaded_dataset.py  preprocess_tensors.py  vocab.py
src/hierarchical/evaluation/: __init__.py  evaluate.py  unified_eval_optimized.py
src/hierarchical/models/: __init__.py  account.py  day.py  transaction.py
src/hierarchical/training/: __init__.py  losses.py  pretrain.py  utils.py
tests/: test_amount_binning.py  test_balance_calculator.py  test_balance_edge_cases.py  test_balance_extractor.py  test_balance_future.py  test_config.py  test_data.py  test_day_nan.py  test_e2e.py  test_eval_helpers.py  test_eval_load_model.py  test_eval_pipeline.py  test_evaluation_components.py  test_financial_flags.py  test_financial_flags_pipeline.py  test_loader.py  test_loading.py  test_losses.py  test_model_save_load.py  test_models.py  test_preloaded_dataset.py  test_preprocess.py  test_preprocess_pipeline.py  test_variable_dims.py  test_vocab.py  test_vocab_consistency.py
tests/integration/: test_smoke.py
